--- a/VideoPopup/style.css
+++ b/VideoPopup/style.css
@@ -45,5 +45,46 @@ body{
 }
 
 .trailer-container{
-    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    transition: opacity 0.6s;
+}
+
+.active.trailer-container{
+    visibility: hidden;
+    opacity: 0;
+}
+
+.trailer-container video{
+    position: relative;
+    max-width: 900px;
+    outline: none;
+    
+}
+
+@media (max-width:991px){
+    .trailer-container video{
+        max-width: 90%;
+    }
+}
+
+.close-icon{
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    color: white;
+    cursor: pointer;
+}
+
+.close-icon:hover{
+    color: aquamarine;
 }
